# cearch

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: ci.yml  release.yml
plans/: bda.plan
src/: db.rs  embed.rs  index.rs  main.rs  symbols.rs
