[package]
categories = ["development-tools", "text-processing", "command-line-utilities"]
edition = "2024"
keywords = ["codebase", "search", "semantic", "similarity"]
license = "AGPL-3.0-only"
license-file = "LICENSE"
name = "cearch"
version = "0.1.0"

[dependencies]
anyhow = "1"
clap = {version = "4.5.47", features = ["derive"]}
fastembed = "5.1.0"
rusqlite = {version = "0.37.0", features = ["bundled"]}
sqlite-vec = "0.1.6"
streaming-iterator = "0.1"
tree-sitter = "0.25.9"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24.0"
